and now it works